# COS332

./: .gitignore  LICENSE  README.md  prac_8_instructions.txt  practical_7
2024-practicals/practicals/practical_3/: server.key
2024-practicals/practicals/practical_4/: README.md
2024-practicals/practicals/practical_5/: Cargo.toml
2024-practicals/practicals/practical_8/: Cargo.toml
2024-practicals/practicals/rocket_server/: Cargo.toml
2024-practicals/practicals/rocket_server/src/: mail.rs  question.rs
2024-practicals/practicals/smtp-proxy/: README.md
2025-practicals/: md5_hash.txt
2025-practicals/cgi/: Cargo.toml  README.md
2025-practicals/cgi/static/: backend.yaml
2025-practicals/ocaml_practical-4/practical_4/: dune-project
2025-practicals/pop/server/: Cargo.toml
2025-practicals/pop3-server/: go.mod  main.go
2025-practicals/practical-1/: Cargo.toml  README.md  dump.rdb
2025-practicals/practical-1/cgi/: backend (Copy).yaml  cgi.rs  show_time.md5
2025-practicals/practical-1/src/: api.rs  server.rs
2025-practicals/practical-2/: Cargo.toml  README.md  friends.db
2025-practicals/practical-2/src/: connection.rs  database.rs  lib.rs  main.rs  question.rs
2025-practicals/practical-3/: dump.rdb  server.csr
2025-practicals/practical-3/src/: api.rs  redis_connection.rs  request.rs  server.rs
2025-practicals/practical-3/static/: calculator.html
2025-practicals/practical-4/: Cargo.toml  README.md  dump.rdb  friends.db
2025-practicals/practical-4/src/: api.rs  redis_connection.rs  request.rs  response.rs  server.rs
2025-practicals/practical-4/static/: index.html
2025-practicals/practical-5/: Cargo.toml  dump.rdb  log4rs.yaml
2025-practicals/practical-5-ocaml/: README.md
2025-practicals/practical-5-ocaml/ldap_client/: ;w  dune-project
2025-practicals/practical-5-ocaml/practical5/: search-request.hex
2025-practicals/practical-5/src/: main.rs  server.rs
2025-practicals/practical-6/: Cargo.toml  README.md  server.crt
2025-practicals/practical-6/src/: lib.rs  mail.rs  main.rs  request.rs  server.rs
2025-practicals/practical-7/: Cargo.toml
2025-practicals/practical-7-go/: Makefile  README.md  go.mod  main.go
2025-practicals/practical-7/src/: main.rs
2025-practicals/practical-8/: Cargo.toml  README.md  README.ms  go.mod  index.html  main.go
2025-practicals/practical-8/src/: main.rs
2025-practicals/practical5/: dune-project
2025-practicals/practical5/_build/: .db  .digest-db  log
2025-practicals/practical_7/: build.zig  build.zig.zon
2025-practicals/practical_7/src/: main.zig
practicals/leptos_p6/: Cargo.toml
practicals/leptos_p6/src/: main.rs
practicals/load_balancer/: Cargo.toml  README.md
practicals/load_balancer/src/: lib.rs  load_balancer.rs  main.rs  request.rs
practicals/logger/: Cargo.toml
practicals/practical_1/: Cargo.toml
practicals/practical_2/: Cargo.toml
practicals/practical_3/: Cargo.toml  README.md  dump.rdb
practicals/practical_3/src/: api.rs  connection.rs  error.rs  http.rs  lib.rs  main.rs  redis_connection.rs  request.rs  response.rs  server.rs  socket.rs
practicals/practical_3/static/: teapot.html
practicals/practical_4/: Cargo.toml
practicals/practical_5/: Cargo.toml  README.md
practicals/practical_6/: Cargo.toml  README.md
practicals/practical_6/src/: api.rs  lib.rs  mail.rs  question.rs  response.rs  server.rs
practicals/practical_6_leptos/: Cargo.toml
practicals/practical_7/: Cargo.toml  README.md
practicals/practical_8/: Cargo.toml  README.md
practicals/rate_limiter/: Cargo.toml
practicals/rocket_server/: Cargo.toml  file.txt
practicals/rocket_server/src/: lib.rs  mail.rs  main.rs  question.rs
practicals/rocket_server/template/: 404.html.hbs  answer.html.hbs  index.html.hbs
practicals/rocket_server/templates/: email.html.hbs  index.html.hbs
practicals/smtp-proxy/: Cargo.toml
tests/: Makefile  main  main.rs
(+118 files in other folders)
