[package]
name = "practical-6"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.39"
uuid = {version = "1.11.0",features = ["v4"]}
log4rs = "1.3.0"
log = "0.4.22"
serde_json = "1.0.133"
serde = "1.0.215"
thiserror = "2.0.9"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
colored = "2.2.0"
clap = { version = "4.5.36", features = ["derive","env"] }
tokio-native-tls = "0.3.1"
base64 = "0.22.1"
native-tls = "0.2.12"
crossterm = "0.29.0"
