[package]
name = "practical_3"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.39"
rand = "0.8.5"
libc = "0.2.169"
socket2 = "0.5.8"
tokio-rustls = "0.26.1"
log4rs = "1.3.0"
log = "0.4.22"
rustls = {version="0.23.20",features = ["ring"]}
thiserror = "2.0.9"
flate2 = "1.0.35"
argon2 = "0.5.3"
serde_json = "1.0.133"
serde = "1.0.215"
colored = "2.2.0"
redis = { version = "0.28.0", features = ["tokio-comp","tokio-rustls-comp"] }
tokio-postgres = {version="0.7.12",features=["with-uuid-1","with-serde_json-1"]}
uuid = {version = "1.11.0",features = ["v4"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
