[package]
name = "rocket_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"], optional = true }
serde = "1.0.217"
serde_json = "1.0.137"
rocket = {version="0.5.1",features=["json","tls","uuid"]}
uuid = {version = "1.11.0",features = ["v4"]}
rand = "0.8.5"
rocket_dyn_templates = "0.2.0"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars", "tera"]
