[package]
name = "rocket_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
serde = "1.0.217"
serde_json = "1.0.137"
rocket = {version="0.5.1",features=["uuid"]}
uuid = {version = "1.11.0",features = ["v4"]}
rand = "0.8.5"
rocket_dyn_templates = {version="0.2.0",features = ["handlebars", "tera"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
tokio-native-tls = "0.3.1"
base64 = "0.22.1"
native-tls = "0.2.12"
log4rs = "1.3.0"
log = "0.4.22"

